[gd_scene format=3 uid="uid://urjg4fjs25x7"]

[ext_resource type="Script" uid="uid://clvmycxdq4erx" path="res://scenes/manager/game_manager/game_manager.gd" id="1_8bqr7"]
[ext_resource type="PackedScene" uid="uid://pies1k28fd7b" path="res://scenes/manager/energy_manager/energy_manager.tscn" id="2_jsdpd"]
[ext_resource type="PackedScene" uid="uid://cvysrvq1sacl" path="res://scenes/manager/life_manager/life_manager.tscn" id="3_hpnnh"]
[ext_resource type="PackedScene" uid="uid://yaay3vdduxmf" path="res://scenes/manager/score_manager/score_manager.tscn" id="4_8m4k4"]

[node name="GameManager" type="Node" unique_id=1589792982]
script = ExtResource("1_8bqr7")

[node name="EnergyManager" parent="." unique_id=1497490658 instance=ExtResource("2_jsdpd")]

[node name="LifeManager" parent="." unique_id=1899410970 instance=ExtResource("3_hpnnh")]

[node name="ScoreManager" parent="." unique_id=1378937739 instance=ExtResource("4_8m4k4")]

[node name="BulletTimer" type="Timer" parent="." unique_id=640207206]
wait_time = 45.0
one_shot = true

[node name="BossTimer" type="Timer" parent="." unique_id=1099443118]
wait_time = 120.0
one_shot = true

[connection signal="player_died" from="LifeManager" to="." method="_on_player_died"]
[connection signal="player_died" from="LifeManager" to="EnergyManager" method="_on_player_died"]
[connection signal="player_died" from="LifeManager" to="ScoreManager" method="_on_player_died"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
[connection signal="timeout" from="BossTimer" to="." method="_on_boss_timer_timeout"]
